src/test/ui/existential_types/generic_not_used.stderr
error: at least one trait must be specified
  --> $DIR/generic_not_used.rs:5:44
   |
LL | existential type WrongGeneric<T: 'static>: 'static;
   |                                            ^^^^^^^

error: type parameter `V` is part of concrete type but not used in parameter list for existential type
  --> $DIR/generic_not_used.rs:8:73
   |
LL |   fn wrong_generic<U: 'static, V: 'static>(_: U, v: V) -> WrongGeneric<U> {
   |  _________________________________________________________________________^
LL | |
LL | |     v
LL | | }
   | |_^

error: aborting due to 2 previous errors

